Adding the trip details

--- a/_posts/2016-10-20-Shanghai.md
+++ b/_posts/2016-10-20-Shanghai.md
@@ -19,17 +19,41 @@ I thoroughly enjoyed the wide variety of scenery on this trip and was starting t
 {% endstory_content %}
 
 {% photoset %}
-  {% picture default shanghai/IMG_0671.jpg alt="Out project" size="6" %}
-  {% picture default shanghai/IMG_0752.jpg alt="Out project" size="6" %}
+  {% picture default shanghai/IMG_0671.jpg alt="Out project" %}
+  {% picture default shanghai/IMG_0752.jpg alt="Out project" %}
 {% endphotoset %}
 
 
 {% photoset %}
-  {% picture default shanghai/IMG_0679.jpg alt="Out project"  size="3" %}
-  {% picture default shanghai/IMG_0752.jpg alt="Out project"  size="9" %}
+  {% picture default shanghai/IMG_0679.jpg alt="Out project" %}
+  {% picture default shanghai/IMG_0752.jpg alt="Out project" %}
+{% endphotoset %}
+
+{% story_content %}
+I thoroughly enjoyed the wide variety of scenery on this trip and was starting to get the hang of driving on the left side of the road. I arrived at the hotel in the early afternoon, made some coffee — the hotel staff conveniently gave me fresh milk upon check-in — and relaxed a bit before heading back out.
+{% endstory_content %}
+
+{% photoset %}
+  {% picture default shanghai/IMG_0901.jpg alt="Out project" size="12" %}
+{% endphotoset %}
+
+{% photoset %}
+  {% picture default shanghai/y/IMG_0626.jpg alt="Out project" %}
+  {% picture default shanghai/y/IMG_0609.jpg alt="Out project" %}
+{% endphotoset %}
+
+{% photoset %}
+  {% picture default shanghai/IMG_0604.jpg alt="Out project" %}
+{% endphotoset %}
+
+{% photoset %}
+  {% picture default shanghai/g/IMG_0574.jpg alt="Out project" %}
+  {% picture default shanghai/g/IMG_0583.jpg alt="Out project" %}
 {% endphotoset %}
 
 
-{% full_page %}
-  {% picture default shanghai/IMG_0901.jpg alt="Out project" size="12" %}
-{% endfull_page %}
+0.5625
+1.741280353200883
+
+590 × 1049
+590 x 339
