Adding the index page

--- a/_posts/2016-10-20-Shanghai.md
+++ b/_posts/2016-10-20-Shanghai.md
@@ -4,7 +4,7 @@ layout: post
 title: Shanghai
 subtitle: "The city of tradition, food, people and buildings"
 cover_image: /images/IMG_0671.jpg
-
+size: 4
 excerpt: ""
 
 author:
@@ -50,10 +50,3 @@ I thoroughly enjoyed the wide variety of scenery on this trip and was starting t
   {% picture default shanghai/g/IMG_0574.jpg alt="Out project" %}
   {% picture default shanghai/g/IMG_0583.jpg alt="Out project" %}
 {% endphotoset %}
-
-
-0.5625
-1.741280353200883
-
-590 × 1049
-590 x 339
