Adding other images

--- a/_posts/2016-11-20-shanghai.md
+++ b/_posts/2016-11-20-shanghai.md
@@ -10,12 +10,12 @@ excerpt: ""
 author:
   name: Siddhartha Gudipati
   twitter: websiddu
-  gplus: 100687498195339762535
+  gplus: SiddharthaGudipati
   bio: Designer
 ---
 
 {% story_content %}
-In september 2016, I visited Shanghai's Google office as part of my work. And it was my first time visiting China. I went there without any expectations. I spend there for the whole week and visited some tourist places. Thought I travelled only a day I covered most of the important attractions. Thanks to Uber and VPN which made travelling much easier and faster.
+In september 2016, I visited Shanghai's Google office as part of my work. And it was my first time visiting China. I went there without any expectations. I spend there for the whole week and visited some tourist places. Thanks to Uber, VPN and Cyan(a friend of a friend) which made travelling much easier and faster.
 {% endstory_content %}
 
 {% story_content location%}
@@ -63,6 +63,10 @@ I visited this place called Confucian Temple with my friend of a friend Cyan. Sh
   {% picture default shanghai/confucian-temple/2.jpg alt="Out project" %}
 {% endphotoset %}
 
+{% story_content location%}
+## Yuyuan Garden
+Extremely pretty view of all these old chinese temples. The lighting on these little 2 stairs houses makes them even more prettier.
+{% endstory_content %}
 
 {% photoset %}
   {% picture default shanghai/yuyuan-garden/1.jpg alt="Out project" %}
@@ -70,6 +74,27 @@ I visited this place called Confucian Temple with my friend of a friend Cyan. Sh
 {% endphotoset %}
 
 {% photoset %}
+  {% picture default shanghai/yuyuan-garden/5.jpg alt="Out project" %}
+{% endphotoset %}
+
+{% photoset %}
+  {% picture default shanghai/yuyuan-garden/3.jpg alt="Out project" %}
+  {% picture default shanghai/yuyuan-garden/4.jpg alt="Out project" %}
+{% endphotoset %}
+
+{% story_content %}
+## The city & others
+Shanghai &mdash; It's an amazing city with everything was huge that you will have the 😲 factor if you are the fist time visitor like me.
+{% endstory_content %}
+
+{% photoset %}
   {% picture default shanghai/city/1.jpg alt="Out project" %}
+{% endphotoset %}
+
+
+{% photoset %}
+  {% picture default shanghai/other/4.jpg alt="Out project" %}
+  {% picture default shanghai/other/1.jpg alt="Out project" %}
+  {% picture default shanghai/other/3.jpg alt="Out project" %}
 {% endphotoset %}
 
