Fixing the typos

--- a/_posts/2016-11-20-shanghai.md
+++ b/_posts/2016-11-20-shanghai.md
@@ -84,7 +84,7 @@ Extremely pretty view of all these old chinese temples. The lighting on these li
 
 {% story_content %}
 ## The city & others
-Shanghai &mdash; It's an amazing city with everything was huge that you will have the 😲 factor if you are the fist time visitor like me.
+Shanghai &mdash; It's an amazing city with everything around you is so huge that you will have the 😲 factor if you are the fist time visitor like me.
 {% endstory_content %}
 
 {% photoset %}
