--- a/_posts/2016-11-20-shanghai.md
+++ b/_posts/2016-11-20-shanghai.md
@@ -3,7 +3,7 @@ layout: post
 
 title: Shanghai
 subtitle: "The city of tradition, food, people and buildings"
-cover_image: /images/covers/shanghai.jpg
+cover_image: shanghai/cover/shanghai
 size: 4
 excerpt: ""
 
@@ -24,19 +24,19 @@ Google office is located in the World financial center (One of the tallest build
 {% endstory_content %}
 
 {% photoset %}
-  {% picture default shanghai/city/2.jpg alt="The tallest tower in Asia." %}
+  {% picture_set shanghai/city/2%}
 {% endphotoset %}
 
 {% photoset %}
-  {% picture default shanghai/pudong/4.jpg alt="The tallest tower in Asia." %}
-  {% picture default shanghai/pudong/5.jpg alt="The tallest tower in Asia." %}
+  {% picture_set shanghai/pudong/4%}
+  {% picture_set shanghai/pudong/5%}
 {% endphotoset %}
 
 {% photoset %}
-  {% picture default shanghai/pudong/1.jpg alt="Out project" %}
-  {% picture default shanghai/pudong/3.jpg alt="Out project" %}
-  {% picture default shanghai/pudong/2.jpg alt="Out project" %}
-  {% picture default shanghai/pudong/6.jpg alt="Out project" %}
+  {% picture_set shanghai/pudong/1%}
+  {% picture_set shanghai/pudong/3%}
+  {% picture_set shanghai/pudong/2%}
+  {% picture_set shanghai/pudong/6%}
 {% endphotoset %}
 
 {% story_content location%}
@@ -45,8 +45,8 @@ The next day I went on a team dinner to a nice restaurant which is located on th
 {% endstory_content %}
 
 {% photoset %}
-  {% picture default shanghai/the-bund/1.jpg alt="Out project" %}
-  {% picture default shanghai/the-bund/2.jpg alt="Out project" %}
+  {% picture_set shanghai/the-bund/1%}
+  {% picture_set shanghai/the-bund/2%}
 {% endphotoset %}
 
 {% story_content location%}
@@ -55,12 +55,12 @@ I visited this place called Confucian Temple with my friend of a friend Cyan. Sh
 {% endstory_content %}
 
 {% photoset %}
-  {% picture default shanghai/confucian-temple/1.jpg alt="Out project" %}
+  {% picture_set shanghai/confucian-temple/1%}
 {% endphotoset %}
 
 {% photoset %}
-  {% picture default shanghai/confucian-temple/3.jpg alt="Out project" %}
-  {% picture default shanghai/confucian-temple/2.jpg alt="Out project" %}
+  {% picture_set shanghai/confucian-temple/3%}
+  {% picture_set shanghai/confucian-temple/2%}
 {% endphotoset %}
 
 {% story_content location%}
@@ -69,17 +69,18 @@ Extremely pretty view of all these old chinese temples. The lighting on these li
 {% endstory_content %}
 
 {% photoset %}
-  {% picture default shanghai/yuyuan-garden/1.jpg alt="Out project" %}
-  {% picture default shanghai/yuyuan-garden/2.jpg alt="Out project" %}
+  {% picture_set shanghai/yuyuan-garden/1%}
+  {% picture_set shanghai/yuyuan-garden/2%}
+{% endphotoset %}
+
+
+{% photoset %}
+  {% picture_set shanghai/yuyuan-garden/5%}
 {% endphotoset %}
 
 {% photoset %}
-  {% picture default shanghai/yuyuan-garden/5.jpg alt="Out project" %}
-{% endphotoset %}
-
-{% photoset %}
-  {% picture default shanghai/yuyuan-garden/3.jpg alt="Out project" %}
-  {% picture default shanghai/yuyuan-garden/4.jpg alt="Out project" %}
+  {% picture_set shanghai/yuyuan-garden/3%}
+  {% picture_set shanghai/yuyuan-garden/4%}
 {% endphotoset %}
 
 {% story_content %}
@@ -88,13 +89,13 @@ Shanghai &mdash; It's an amazing city with everything around you is so huge that
 {% endstory_content %}
 
 {% photoset %}
-  {% picture default shanghai/city/1.jpg alt="Out project" %}
+  {% picture_set shanghai/city/1%}
 {% endphotoset %}
 
 
 {% photoset %}
-  {% picture default shanghai/other/4.jpg alt="Out project" %}
-  {% picture default shanghai/other/1.jpg alt="Out project" %}
-  {% picture default shanghai/other/3.jpg alt="Out project" %}
+  {% picture_set shanghai/other/4%}
+  {% picture_set shanghai/other/1%}
+  {% picture_set shanghai/other/3%}
 {% endphotoset %}
 
