Adding New York

--- a/_posts/2017-09-02-17mile-drive.md
+++ b/_posts/2017-09-02-17mile-drive.md
@@ -37,3 +37,20 @@ author:
 {% photoset %}
   {% picture_set 17-mdrive/9%}
 {% endphotoset %}
+
+{% photoset %}
+  {% picture_set 17-mdrive/15%}
+{% endphotoset %}
+
+{% photoset %}
+  {% picture_set 17-mdrive/10%}
+{% endphotoset %}
+
+{% photoset %}
+  {% picture_set 17-mdrive/13%}
+{% endphotoset %}
+
+{% photoset %}
+  {% picture_set 17-mdrive/11%}
+  {% picture_set 17-mdrive/14%}
+{% endphotoset %}
