--- a/_posts/2016-11-20-shanghai.md
+++ b/_posts/2016-11-20-shanghai.md
@@ -5,7 +5,7 @@ title: Shanghai
 subtitle: "The city of tradition, food, people and buildings"
 cover_image: shanghai/cover/shanghai
 size: 4
-excerpt: ""
+excerpt: "In september 2016, I visited Shanghai's Google office as part of my work. And it was my first time visiting China. I went there without any expectations. I spend there for the whole week and visited some tourist places. Thanks to Uber, VPN and Cyan(a friend of a friend) which made travelling much easier and faster."
 
 author:
   name: Siddhartha Gudipati
